--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="mail">
         <![CDATA[
             <div style=\"text-align:center; font-family: Arial, Helvetica, sans-serif; background-color:#ddd; padding-bottom:15px;\">
-        	<p style=\"background-color:#F66C1C; color:white; padding-top:15px; padding-bottom:15px; font-size:20px; margin-bottom:32px;\">DIARY CODE</p>
+        	<p style=\"background-color:#F66C1C; color:white; padding-top:15px; padding-bottom:15px; font-size:20px; margin-bottom:32px;\">MY DIARY CODE</p>
 
 	        <p>We received a request regarding your diary.</p>
 
@@ -22,9 +22,9 @@
 
     <string name="cc_head">create your code</string>
 
-    <string name="mail_header">Code for unlock DiaryApplication</string>
+    <string name="mail_header">Code for unlock My Diary Application</string>
 
     <string name="fc_text">We will send you a code for unlock it to your email.</string>
 
-    <string name="popup">You don\'t have a code, Or do you want to create.</string>
+    <string name="popup">You don\'t have a code, you want to create a code?</string>
 </resources>
